[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openclaw-cli"
version = "0.2.0"
description = "Command center CLI for the OpenClaw AI agent workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
oc = "openclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
